--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,10 +1,10 @@
 <%= render 'loader' %>
 <div id="wrapper">
-  <%= render 'modal' %>
-  <%= render 'header' %>
-  <%= render 'home' %>
+  <%#= render 'modal' %>
+  <%= render 'header_menu' %>
+  <%= render 'home_video' %>
   <%= render 'sections' %>
-  <%#= render 'footer' %>
+  <%= render 'footer' %>
   <%= render 'copyrights' %>
 </div>
 <%= javascript_include_tag 'jquery.min.js' %>
