--- a/app/views/visitors/_sections.html.erb
+++ b/app/views/visitors/_sections.html.erb
@@ -1,8 +1,9 @@
+<%= render 'visitors/sections/formlist' %>
 <%= render 'visitors/sections/section1' %>
-<%#= render 'visitors/sections/section2' %>
-<%#= render 'visitors/sections/section3' %>
-<%#= render 'visitors/sections/section4' %>
-<%#= render 'visitors/sections/section5' %>
-<%#= render 'visitors/sections/section6' %>
-<%#= render 'visitors/sections/section7' %>
-<%#= render 'visitors/sections/section8' %>
+<%= render 'visitors/sections/section2' %>
+<%= render 'visitors/sections/section3' %>
+<%= render 'visitors/sections/section4' %>
+<%= render 'visitors/sections/section5' %>
+<%= render 'visitors/sections/section6' %>
+<%= render 'visitors/sections/section7' %>
+<%= render 'visitors/sections/section8' %>
