--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,9 +35,9 @@
   <%= stylesheet_link_tag 'style' %>
 
   <!-- Canvas-->
-  <%#= javascript_include_tag 'swirl.js' %>
-  <%#= javascript_include_tag 'util.js' %>
-  <%#= javascript_include_tag 'noise.min.js' %>
+  <%= javascript_include_tag 'swirl.js' %>
+  <%= javascript_include_tag 'util.js' %>
+  <%= javascript_include_tag 'noise.min.js' %>
 
   <!--[if lt IE 9]>
 <%= javascript_include_tag 'html5shiv' %>
