--- a/app/views/visitors/_copyrights.html.erb
+++ b/app/views/visitors/_copyrights.html.erb
@@ -1,4 +1,4 @@
-<div class="copyrights">
+<div class="copyrights" id="copyrights">
   <div class="container">
     <div class="clearfix">
       <div class="pull-left">
@@ -10,7 +10,17 @@
       <div class="pull-right">
         <div class="footer-links">
           <ul class="list-inline">
-            <li>Diseñado y desarrollado por : <a href="#">Ginebra ^^</a></li>
+            <li>Diseñado y desarrollado por : <a>
+              <span class="rainbow1">G</span>
+              <span class="rainbow2">i</span>
+              <span class="rainbow3">n</span>
+              <span class="rainbow4">e</span>
+              <span class="rainbow5">b</span>
+              <span class="rainbow6">r</span>
+              <span class="rainbow7">a</span>
+              <span class="rainbow8">^</span>
+              <span class="rainbow9">^</span>
+            </a></li>
           </ul>
         </div>
       </div>
