--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -3,7 +3,8 @@
   <%#= render 'modal' %>
   <%= render 'header_menu' %>
   <%= render 'home_video' %>
-  <%= render 'sections' %>
+  <%= render 'formlist' %>
+  <%#= render 'sections' %>
   <%= render 'footer' %>
   <%= render 'copyrights' %>
 </div>
