--- a/app/views/visitors/_formlist.html.erb
+++ b/app/views/visitors/_formlist.html.erb
@@ -1,11 +1,10 @@
-<section class="section" id="selection1">
+<section class="section" id="formlist">
   <div class="container">
     <div class="row">
 
       <div class="col-md-4">
         <div class="custom-module">
-          <img src="upload/device_01.png" alt="" class="img-responsive wow slideInLeft img-center">
-          <!--          <img src="upload/selection_1_left.jpg" alt="" class="img-responsive wow slideInLeft">-->
+          <img src="upload/formlist.jpg" alt="" class="img-responsive wow slideInLeft img-center">
         </div><!-- end module -->
       </div><!-- end col -->
       <div class="col-md-8">
