--- a/app/views/visitors/_copyrights.html.erb
+++ b/app/views/visitors/_copyrights.html.erb
@@ -10,7 +10,7 @@
       <div class="pull-right">
         <div class="footer-links">
           <ul class="list-inline">
-            <li>Diseñado y desarrollado por : <a>
+            <li>Diseñado y desarrollado por:&#160&#160<a class="owner">
               <span class="rainbow1">G</span>
               <span class="rainbow2">i</span>
               <span class="rainbow3">n</span>
