--- a/app/views/visitors/_formlist.html.erb
+++ b/app/views/visitors/_formlist.html.erb
@@ -8,7 +8,7 @@
         </div><!-- end module -->
       </div><!-- end col -->
       <div class="col-md-8">
-        <div class="custom-module p40l">
+        <div class="custom-module">
           <h2>¡Hola Tribu! 👽 Reservad el <mark>Sábado 7 de marzo</mark> porque ya tenemos fecha para Pragma</h2>
           <p>Tendremos a un artistazo invitado que viene desde Barcelona y no es otro que el gran Chik'M (Another Psyde Records). Ya pasó por PRAGMA la temporada pasada y estábamos deseando volver a tenerle con nosotros 🤩👏 Lleva ya casi 20 años a los platos y es adorado por todos y todas 💜, ¿cómo no? Es una de la referencias de nuestro país en el maravilloso mundo del #darkprog, #zenonesque y #psytechno. ¡Sus sets son todo un regalo para los oídos! 🤤⁠ Lo podéis comprobar <a href="https://soundcloud.com/chikm">aquí</a></p>
           <p>También contaremos con nuestro gran amigo Lucas (Furthur), quién se encargará de abrir la noche con uno de sus míticos pero siempre sorprendetes opening sets. ¡Puro groove en cabina! 😎⁠</p>
