--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,6 @@
 <head>
   <title>Kream</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%#= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 
   <!-- Basic -->
@@ -24,8 +23,10 @@
   <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700,900" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,400i,700,700i" rel="stylesheet">
+  <%= stylesheet_link_tag "https://fonts.googleapis.com/css?family=Orbitron&display=swap" %>
+  <%= stylesheet_link_tag "https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap" %>
+  <%= stylesheet_link_tag "https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700,900" %>
+  <%= stylesheet_link_tag "https://fonts.googleapis.com/css?family=Droid+Serif:400,400i,700,700i" %>
 
   <!-- Custom & Default Styles -->
   <%= stylesheet_link_tag 'bootstrap.min' %>
