--- a/app/views/visitors/_header_menu.html.erb
+++ b/app/views/visitors/_header_menu.html.erb
@@ -7,20 +7,16 @@
             <strong><i class="fa fa-phone"></i></strong> +90 543 123 45 67 &nbsp;&nbsp;
             <strong><i class="fa fa-envelope"></i></strong> <a href="mailto:#">kream.madrid@gmail.com</a>
           </p>
-        </div><!-- end left -->
+        </div>
         <div class="col-md-6 col-sm-6 hidden-xs text-right">
           <div class="social">
             <a class="facebook" href="https://es-es.facebook.com/Kr3am/" data-tooltip="tooltip" data-placement="bottom" title="Facebook"><i class="fa fa-facebook"></i></a>
             <a class="instagram" href="https://www.instagram.com/kream_madrid/?hl=es" data-tooltip="tooltip" data-placement="bottom" title="Instagram"><i class="fa fa-instagram"></i></a>
-            <!--            <a class="twitter" href="#" data-tooltip="tooltip" data-placement="bottom" title="Twitter"><i class="fa fa-twitter"></i></a>-->
-            <!--            <a class="google" href="#" data-tooltip="tooltip" data-placement="bottom" title="Google Plus"><i class="fa fa-google-plus"></i></a>-->
-            <!--            <a class="linkedin" href="#" data-tooltip="tooltip" data-placement="bottom" title="Linkedin"><i class="fa fa-linkedin"></i></a>-->
-            <!--            <a class="pinterest" href="#" data-tooltip="tooltip" data-placement="bottom" title="Pinterest"><i class="fa fa-pinterest"></i></a>-->
-          </div><!-- end social -->
-        </div><!-- end left -->
-      </div><!-- end row -->
-    </div><!-- end container -->
-  </div><!-- end topbar -->
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <div class="container">
     <nav class="navbar navbar-default yamm">
@@ -32,16 +28,17 @@
           <span class="icon-bar"></span>
         </button>
         <div class="logo-normal">
-          <a class="navbar-brand" href="index.html.erb"><img src="images/logo.png" alt=""></a>
+          <a class="navbar-brand" href="#"><img src="images/logo.png" alt=""></a>
         </div>
       </div>
 
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#formlist">Próximo evento</a></li>
+          <li><a href="#">Intro</a></li>
+          <li><a href="#formlist">Próxima sesión</a></li>
 <!--          <li class="iconitem"><a href="#" data-toggle="modal" data-target="#login-modal"><i class="fa fa-search"></i></a></li>-->
         </ul>
       </div>
-    </nav><!-- end navbar -->
-  </div><!-- end container -->
+    </nav>
+  </div>
 </header>
