--- a/app/views/visitors/_home_video.html.erb
+++ b/app/views/visitors/_home_video.html.erb
@@ -3,15 +3,17 @@
   <div class="home-text-wrapper relative container">
     <div class="home-message">
       <p>psychodelic tribal session</p>
-      <small>Edulogy is the ideal choice for your organization, your business and your online education system. Create your online course now with unlimited page templates, color options, and menu features.</small>
+      <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</small>
       <div class="btn-wrapper">
         <div class="text-center">
-          <a href="#" class="btn btn-primary wow slideInLeft">Read More</a> &nbsp;&nbsp;&nbsp;<a href="#" class="btn btn-default wow slideInRight">Buy Now</a>
+          <a href="#formlist" class="btn btn-primary wow slideInLeft">Próxima sesión</a> &nbsp;&nbsp;&nbsp;<a href="#" class="btn btn-default wow slideInRight">Buy Now</a>
         </div>
-      </div><!-- end row -->
+      </div>
     </div>
   </div>
   <div class="slider-bottom">
-    <span>Explore <i class="fa fa-angle-down"></i></span>
+    <a href="#formlist">
+      <span>Explorar <i class="fa fa-angle-down"></i></span>
+    </a>
   </div>
 </section>
