--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,7 @@
   <%= stylesheet_link_tag 'style' %>
 
   <!-- Canvas-->
+  <%= javascript_include_tag 'aurora.js' %>
   <%= javascript_include_tag 'swirl.js' %>
   <%= javascript_include_tag 'util.js' %>
   <%= javascript_include_tag 'noise.min.js' %>
