--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -4,8 +4,9 @@
   <%= render 'header_menu' %>
   <%= render 'home_video' %>
   <%= render 'formlist' %>
+  <%= render 'tribe' %>
   <%#= render 'sections' %>
-  <%= render 'footer' %>
+  <%#= render 'footer' %>
   <%= render 'copyrights' %>
 </div>
 <%= javascript_include_tag 'jquery.min.js' %>
