--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,9 @@
 
   <!-- Canvas-->
   <%= javascript_include_tag 'aurora.js' %>
+  <%= javascript_include_tag 'coalesce.js' %>
   <%= javascript_include_tag 'swirl.js' %>
+  <%= javascript_include_tag 'pipeline.js' %>
   <%= javascript_include_tag 'util.js' %>
   <%= javascript_include_tag 'noise.min.js' %>
 
