--- a/app/views/visitors/_header_menu.html.erb
+++ b/app/views/visitors/_header_menu.html.erb
@@ -36,6 +36,9 @@
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#">Intro</a></li>
           <li><a href="#formlist">Próxima sesión</a></li>
+          <li><a href="#past_sessions">Sesiones pasadas</a></li>
+          <li><a href="#tribe_title">Tribu</a></li>
+          <li><a href="#friends">Amigos</a></li>
 <!--          <li class="iconitem"><a href="#" data-toggle="modal" data-target="#login-modal"><i class="fa fa-search"></i></a></li>-->
         </ul>
       </div>
