--- a/app/views/visitors/_formlist.html.erb
+++ b/app/views/visitors/_formlist.html.erb
@@ -5,8 +5,8 @@
       <div class="col-md-4">
         <div class="custom-module">
           <img src="upload/formlist.jpg" alt="" class="img-responsive wow slideInLeft img-center">
-        </div><!-- end module -->
-      </div><!-- end col -->
+        </div>
+      </div>
       <div class="col-md-8">
         <div class="custom-module">
           <h2>¡Hola Tribu! 👽 Reservad el <mark>Sábado 7 de marzo</mark> porque ya tenemos fecha para Pragma</h2>
@@ -18,40 +18,40 @@
           <form class="form-horizontal">
             <h3>Pide tus listas</h3>
             <div class="form-group">
-              <div class="col-sm-10">
+              <div class="col-sm-10 col-xs-9">
                 <label>De 00h a 02h • 10€ con 1 COPA o 2 CERVEZAS/refrescos • 15€ con 2 COPAS</label>
               </div>
-              <div class="col-sm-2">
+              <div class="col-sm-2 col-xs-3">
                 <select class="form-control form-control-lg">
                   <option>0</option><option>1</option><option>2</option><option>3</option><option>4</option><option>5</option><option>6</option><option>7</option><option>8</option><option>9</option><option>10</option>
                 </select>
               </div>
             </div>
             <div class="form-group">
-              <div class="col-sm-10">
+              <div class="col-sm-10 col-xs-9">
                 <label>De 02h a 03h • 12€ con 1 COPA • 15€ con 2 COPAS</label>
               </div>
-              <div class="col-sm-2">
+              <div class="col-sm-2 col-xs-3">
                 <select class="form-control form-control-lg">
                   <option>0</option><option>1</option><option>2</option><option>3</option><option>4</option><option>5</option><option>6</option><option>7</option><option>8</option><option>9</option><option>10</option>
                 </select>
               </div>
             </div>
             <div class="form-group">
-              <div class="col-sm-10">
+              <div class="col-sm-10 col-xs-9">
                 <label> De 03h al CIERRE • 12€ con 1 COPA</label>
               </div>
-              <div class="col-sm-2">
+              <div class="col-sm-2 col-xs-3">
                 <select class="form-control form-control-lg">
                   <option>0</option><option>1</option><option>2</option><option>3</option><option>4</option><option>5</option><option>6</option><option>7</option><option>8</option><option>9</option><option>10</option>
                 </select>
               </div>
             </div>
             <div class="form-group">
-              <div class="col-sm-2">
+              <div class="col-sm-2 col-xs-2">
                 <label>Email</label>
               </div>
-              <div class="col-sm-10">
+              <div class="col-sm-10 col-xs-10">
                 <input type="email" class="form-control" id="email" placeholder="alguien@algo.com" required>
               </div>
             </div>
