--- a/app/views/visitors/_tribe.html.erb
+++ b/app/views/visitors/_tribe.html.erb
@@ -1,4 +1,4 @@
-<section class="section db p120">
+<section class="section db p120" id="tribe_title">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
