--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -4,9 +4,9 @@
   <%= render 'header_menu' %>
   <%= render 'home_video' %>
   <%= render 'formlist' %>
-  <%= render 'past_sessions' %>
-  <%= render 'tribe' %>
-  <%= render 'friends' %>
+  <%#= render 'past_sessions' %>
+  <%#= render 'tribe' %>
+  <%#= render 'friends' %>
   <%#= render 'sections' %>
   <%#= render 'footer' %>
   <%= render 'copyrights' %>
