--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -2340,6 +2340,8 @@ html {
 
 .owner {
     font-family: 'Gloria Hallelujah', cursive;
+    display: inline-block;
+    margin: 4px;
 }
 
 #formlist {
