Mejora menu y cabecera

--- a/app/views/visitors/_home_video.html.erb
+++ b/app/views/visitors/_home_video.html.erb
@@ -6,7 +6,7 @@
       <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</small>
       <div class="btn-wrapper">
         <div class="text-center">
-          <a href="#formlist" class="btn btn-primary wow slideInLeft">Próxima sesión</a> &nbsp;&nbsp;&nbsp;<a href="#" class="btn btn-default wow slideInRight">Buy Now</a>
+          <a href="#formlist" class="btn btn-primary wow slideInLeft">Próxima sesión</a> &nbsp;&nbsp;&nbsp;<a href="#past_sessions" class="btn btn-default wow slideInRight">Sesiones pasadas</a>
         </div>
       </div>
     </div>
