--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -225,7 +225,7 @@ HEADER
     top: 0;
     right: 0;
     padding: 0;
-    background-color: transparent;
+    background-color: #000;
     text-decoration: none !important;
     -webkit-transition: all .3s ease-in-out;
     -moz-transition: all .3s ease-in-out;
@@ -255,7 +255,16 @@ HEADER
     background-color: #000;
     left: 0;
     padding: 15px 0;
-    right: 0,
+    right: 0;
+}
+
+.header.affix-top {
+    top: 0;
+    z-index: 100;
+    background-color: #000;
+    left: 0;
+    padding: 15px 0;
+    right: 0;
 }
 
 .header.header-normal.affix {
@@ -477,7 +486,7 @@ MEGA MENU
 
 .yamm .dropdown-menu li a {
     padding: 0 !important;
-    color: #848484;
+    color: #ffffff;
 }
 
 .yamm .dropdown-menu li:hover a {
@@ -498,7 +507,7 @@ MEGA MENU
 .yamm .dropdown .dropdown-menu {
     border-radius: 0;
     border-top: 3px solid #ddd;
-    background-color: #fff !important;
+    background-color: #000 !important;
     margin-top: 24px;
     padding: 20px 30px;
 }
