--- a/app/views/visitors/_copyrights.html.erb
+++ b/app/views/visitors/_copyrights.html.erb
@@ -10,7 +10,7 @@
       <div class="pull-right">
         <div class="footer-links">
           <ul class="list-inline">
-            <li>Diseñado y desarrollado por:&#160&#160<a class="owner">
+            <li>Diseñado y desarrollado por:&#160&#160<a href="#" data-toggle="modal" data-target="#login-modal" class="owner">
               <span class="rainbow1">G</span>
               <span class="rainbow2">i</span>
               <span class="rainbow3">n</span>
@@ -25,5 +25,5 @@
         </div>
       </div>
     </div>
-  </div><!-- end container -->
-</div><!-- end copy -->
+  </div>
+</div>
