--- a/app/views/visitors/_header_menu.html.erb
+++ b/app/views/visitors/_header_menu.html.erb
@@ -1,27 +1,8 @@
 <header class="header">
-  <div class="topbar clearfix">
-    <div class="container">
-      <div class="row-fluid">
-        <div class="col-md-6 col-sm-6 text-left">
-          <p>
-            <strong><i class="fa fa-phone"></i></strong> +90 543 123 45 67 &nbsp;&nbsp;
-            <strong><i class="fa fa-envelope"></i></strong> <a href="mailto:#">kream.madrid@gmail.com</a>
-          </p>
-        </div>
-        <div class="col-md-6 col-sm-6 hidden-xs text-right">
-          <div class="social">
-            <a class="facebook" href="https://es-es.facebook.com/Kr3am/" data-tooltip="tooltip" data-placement="bottom" title="Facebook"><i class="fa fa-facebook"></i></a>
-            <a class="instagram" href="https://www.instagram.com/kream_madrid/?hl=es" data-tooltip="tooltip" data-placement="bottom" title="Instagram"><i class="fa fa-instagram"></i></a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
   <div class="container">
     <nav class="navbar navbar-default yamm">
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar" id="header_menu_button">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -34,12 +15,20 @@
 
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Intro</a></li>
-          <li><a href="#formlist">Próxima sesión</a></li>
-          <li><a href="#past_sessions">Sesiones pasadas</a></li>
-          <li><a href="#tribe_title">Tribu</a></li>
-          <li><a href="#friends">Amigos</a></li>
-<!--          <li class="iconitem"><a href="#" data-toggle="modal" data-target="#login-modal"><i class="fa fa-search"></i></a></li>-->
+          <li><a href="#" onclick="$('#header_menu_button').attr('aria-expanded') == 'true' ? $('#header_menu_button').click() : '';">Intro</a></li>
+          <li><a href="#formlist" onclick="$('#header_menu_button').attr('aria-expanded') == 'true' ? $('#header_menu_button').click() : '';">Próxima sesión</a></li>
+          <li><a href="#past_sessions" onclick="$('#header_menu_button').attr('aria-expanded') == 'true' ? $('#header_menu_button').click() : '';">Sesiones pasadas</a></li>
+          <li><a href="#tribe_title" onclick="$('#header_menu_button').attr('aria-expanded') == 'true' ? $('#header_menu_button').click() : '';">Tribu</a></li>
+          <li><a href="#friends" onclick="$('#header_menu_button').attr('aria-expanded') == 'true' ? $('#header_menu_button').click() : '';">Amigos</a></li>
+          <li class="dropdown hassubmenu">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Contacto y redes <span class="fa fa-angle-down"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><a href="tel:+34912345678#"><strong><i class="fa fa-phone"></i></strong>&nbsp;&nbsp;&nbsp;+34 91 234 56 78</a></li>
+              <li><a href="mailto:kream.madrid@gmail.com"><strong><i class="fa fa-envelope"></i></strong>&nbsp;&nbsp;&nbsp;kream.madrid@gmail.com</a></li>
+              <li><a class="facebook" href="https://es-es.facebook.com/Kr3am/" data-tooltip="tooltip" data-placement="bottom" title="Facebook" target="_blank"><i class="fa fa-facebook"></i>&nbsp;&nbsp;&nbsp;Facebook</a></li>
+              <li><a class="instagram" href="https://www.instagram.com/kream_madrid/?hl=es" data-tooltip="tooltip" data-placement="bottom" title="Instagram" target="_blank"><i class="fa fa-instagram"></i>&nbsp;&nbsp;&nbsp;Instagram</a></li>
+            </ul>
+          </li>
         </ul>
       </div>
     </nav>
