--- a/app/views/visitors/_modal.html.erb
+++ b/app/views/visitors/_modal.html.erb
@@ -1,17 +1,18 @@
 <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-hidden="true" style="display: none;">
   <div class="modal-dialog">
     <div class="modal-content">
-      <!-- Begin # DIV Form -->
       <div id="div-forms">
         <form id="login-form">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span class="flaticon-add" aria-hidden="true"></span>
           </button>
           <div class="modal-body">
-            <input class="form-control" type="text" placeholder="What you are looking for?" required>
+            <input class="form-control" type="text" placeholder="Escribe aquí lo que quieras" required>
+            <br>
+            <p>Hola, soy Ginebra. Si tienes cualquier sugerencia, idea o simplemente quieres decirme algo, puedes hacerlo por aquí arriba ^^</p>
           </div>
-        </form><!-- End # Login Form -->
-      </div><!-- End # DIV Form -->
+        </form>
+      </div>
     </div>
   </div>
 </div>
