--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,6 +1,6 @@
 <%= render 'loader' %>
 <div id="wrapper">
-  <%#= render 'modal' %>
+  <%= render 'modal' %>
   <%= render 'header_menu' %>
   <%= render 'home_video' %>
   <%= render 'formlist' %>
