--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,12 +28,22 @@
   <%= stylesheet_link_tag "https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700,900" %>
   <%= stylesheet_link_tag "https://fonts.googleapis.com/css?family=Droid+Serif:400,400i,700,700i" %>
 
+  <!-- JavaScript -->
+  <%= javascript_include_tag 'jquery.min.js' %>
+  <%= javascript_include_tag 'bootstrap.min.js' %>
+  <%= javascript_include_tag 'carousel.js' %>
+  <%= javascript_include_tag 'animate.js' %>
+  <%= javascript_include_tag 'custom.js' %>
+  <%= javascript_include_tag 'videobg.js' %>
+  <%= javascript_include_tag 'jquery.prettyPhoto.js' %>
+
   <!-- Custom & Default Styles -->
   <%= stylesheet_link_tag 'bootstrap.min' %>
   <%= stylesheet_link_tag 'font-awesome.min' %>
   <%= stylesheet_link_tag 'carousel' %>
   <%= stylesheet_link_tag 'animate' %>
   <%= stylesheet_link_tag 'style' %>
+  <%= stylesheet_link_tag 'prettyPhoto' %>
 
 </head>
 <body>
