--- a/app/views/visitors/_formlist.html.erb
+++ b/app/views/visitors/_formlist.html.erb
@@ -7,7 +7,7 @@
           <img src="upload/formlist.jpg" alt="" class="img-responsive wow slideInLeft img-center">
         </div>
       </div>
-      <div class="col-md-8">
+      <div class="col-md-8 overlay-manual">
         <div class="custom-module">
           <h2>¡Hola Tribu! 👽 Reservad el <mark>Sábado 7 de marzo</mark> porque ya tenemos fecha para Pragma</h2>
           <p>Tendremos a un artistazo invitado que viene desde Barcelona y no es otro que el gran Chik'M (Another Psyde Records). Ya pasó por PRAGMA la temporada pasada y estábamos deseando volver a tenerle con nosotros 🤩👏 Lleva ya casi 20 años a los platos y es adorado por todos y todas 💜, ¿cómo no? Es una de la referencias de nuestro país en el maravilloso mundo del #darkprog, #zenonesque y #psytechno. ¡Sus sets son todo un regalo para los oídos! 🤤⁠ Lo podéis comprobar <a href="https://soundcloud.com/chikm">aquí</a></p>
@@ -57,14 +57,14 @@
             </div>
             <br>
             <div class="form-group">
-              <div class="col-sm-12">
+              <div class="col-sm-12 formlist-button">
                 <button type="submit" class="btn btn-primary">Pedir listas</button>
               </div>
             </div>
           </form>
 
-        </div><!-- end module -->
-      </div><!-- end col -->
-    </div><!-- end row -->
-  </div><!-- end container -->
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
