--- a/app/views/visitors/_home_video.html.erb
+++ b/app/views/visitors/_home_video.html.erb
@@ -5,8 +5,10 @@
       <p>psychodelic tribal session</p>
       <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</small>
       <div class="btn-wrapper">
-        <div class="text-center">
-          <a href="#formlist" class="btn btn-primary wow slideInLeft">Próxima sesión</a> &nbsp;&nbsp;&nbsp;<a href="#past_sessions" class="btn btn-default wow slideInRight">Sesiones pasadas</a>
+        <div class="text-center line-height">
+          <a href="#formlist" class="btn btn-primary wow slideInLeft">Próxima sesión</a>
+          <span class="hidden-xs"> &nbsp;&nbsp;&nbsp;</span>
+          <a href="#past_sessions" class="btn btn-default wow slideInRight">Sesiones pasadas</a>
         </div>
       </div>
     </div>
