--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -4,16 +4,10 @@
   <%= render 'header_menu' %>
   <%= render 'home_video' %>
   <%= render 'formlist' %>
-  <%#= render 'past_sessions' %>
+  <%= render 'past_sessions' %>
   <%#= render 'tribe' %>
   <%#= render 'friends' %>
   <%#= render 'sections' %>
   <%#= render 'footer' %>
   <%= render 'copyrights' %>
 </div>
-<%= javascript_include_tag 'jquery.min.js' %>
-<%= javascript_include_tag 'bootstrap.min.js' %>
-<%= javascript_include_tag 'carousel.js' %>
-<%= javascript_include_tag 'animate.js' %>
-<%= javascript_include_tag 'custom.js' %>
-<%= javascript_include_tag 'videobg.js' %>
