Javascript en su sitio

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -11,3 +11,12 @@
   <%#= render 'footer' %>
   <%= render 'copyrights' %>
 </div>
+
+<!-- JavaScript -->
+<%= javascript_include_tag 'jquery.min.js' %>
+<%= javascript_include_tag 'bootstrap.min.js' %>
+<%= javascript_include_tag 'carousel.js' %>
+<%= javascript_include_tag 'animate.js' %>
+<%= javascript_include_tag 'custom.js' %>
+<%= javascript_include_tag 'videobg.js' %>
+<%= javascript_include_tag 'jquery.prettyPhoto.js' %>
