--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
   <!-- Site Meta -->
-  <title>Edulogy</title>
+  <title>Kream</title>
   <meta name="keywords" content="">
   <meta name="description" content="">
   <meta name="author" content="">
@@ -28,14 +28,6 @@
   <%= stylesheet_link_tag "https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700,900" %>
   <%= stylesheet_link_tag "https://fonts.googleapis.com/css?family=Droid+Serif:400,400i,700,700i" %>
 
-  <!-- JavaScript -->
-  <%= javascript_include_tag 'jquery.min.js' %>
-  <%= javascript_include_tag 'bootstrap.min.js' %>
-  <%= javascript_include_tag 'carousel.js' %>
-  <%= javascript_include_tag 'animate.js' %>
-  <%= javascript_include_tag 'custom.js' %>
-  <%= javascript_include_tag 'videobg.js' %>
-  <%= javascript_include_tag 'jquery.prettyPhoto.js' %>
 
   <!-- Custom & Default Styles -->
   <%= stylesheet_link_tag 'bootstrap.min' %>
