--- a/app/views/visitors/_header_menu.html.erb
+++ b/app/views/visitors/_header_menu.html.erb
@@ -21,7 +21,7 @@
           <li><a href="#tribe_title" onclick="$('#header_menu_button').attr('aria-expanded') == 'true' ? $('#header_menu_button').click() : '';">Tribu</a></li>
           <li><a href="#friends" onclick="$('#header_menu_button').attr('aria-expanded') == 'true' ? $('#header_menu_button').click() : '';">Amigos</a></li>
           <li class="dropdown hassubmenu">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Contacto y redes <span class="fa fa-angle-down"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Contacto & redes <span class="fa fa-angle-down"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li><a href="tel:+34912345678#"><strong><i class="fa fa-phone"></i></strong>&nbsp;&nbsp;&nbsp;+34 91 234 56 78</a></li>
               <li><a href="mailto:kream.madrid@gmail.com"><strong><i class="fa fa-envelope"></i></strong>&nbsp;&nbsp;&nbsp;kream.madrid@gmail.com</a></li>
