--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,6 @@
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
   <!-- Site Meta -->
-  <title>Kream</title>
   <meta name="keywords" content="">
   <meta name="description" content="">
   <meta name="author" content="">
@@ -41,6 +40,15 @@
 <body>
 
 <%= yield %>
+
+<!-- JavaScript -->
+<%= javascript_include_tag 'jquery.min.js' %>
+<%= javascript_include_tag 'bootstrap.min.js' %>
+<%= javascript_include_tag 'carousel.js' %>
+<%= javascript_include_tag 'animate.js' %>
+<%= javascript_include_tag 'custom.js' %>
+<%= javascript_include_tag 'videobg.js' %>
+<%= javascript_include_tag 'jquery.prettyPhoto.js' %>
 
 </body>
 </html>
