--- a/app/views/visitors/_header_menu.html.erb
+++ b/app/views/visitors/_header_menu.html.erb
@@ -1,5 +1,5 @@
 <header class="header">
-  <div class="clearfix container">
+  <div class="container">
     <nav class="navbar navbar-default yamm">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar" id="header_menu_button">
