--- a/app/views/visitors/_friends.html.erb
+++ b/app/views/visitors/_friends.html.erb
@@ -11,7 +11,7 @@
           <div class="image-wrap entry">
             <img src="upload/blog_01.jpeg" alt="" class="img-responsive">
             <div class="magnifier">
-              <a href="blog-single.html" title=""><i class="flaticon-add"></i></a>
+              <a href="blog-single.html" title="">+</a>
             </div>
           </div><!-- end image-wrap -->
 
@@ -35,7 +35,7 @@
           <div class="image-wrap entry">
             <img src="upload/blog_02.jpeg" alt="" class="img-responsive">
             <div class="magnifier">
-              <a href="blog-single.html" title=""><i class="flaticon-add"></i></a>
+              <a href="blog-single.html" title="">+</a>
             </div>
           </div><!-- end image-wrap -->
 
@@ -59,7 +59,7 @@
           <div class="image-wrap entry">
             <img src="upload/blog_03.jpeg" alt="" class="img-responsive">
             <div class="magnifier">
-              <a href="blog-single.html" title=""><i class="flaticon-add"></i></a>
+              <a href="blog-single.html" title="">+</a>
             </div>
           </div><!-- end image-wrap -->
 
