--- a/app/views/visitors/_modal.html.erb
+++ b/app/views/visitors/_modal.html.erb
@@ -4,7 +4,7 @@
       <div id="div-forms">
         <form id="login-form">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span class="flaticon-add" aria-hidden="true"></span>
+            <span aria-hidden="true">+</span>
           </button>
           <div class="modal-body">
             <input class="form-control" type="text" placeholder="Escribe aquí lo que quieras" required>
