--- a/app/views/visitors/sections/_section2.html.erb
+++ b/app/views/visitors/sections/_section2.html.erb
@@ -11,7 +11,7 @@
           <div class="image-wrap entry">
             <img src="upload/course_01.jpg" alt="" class="img-responsive">
             <div class="magnifier">
-              <a href="#" title=""><i class="flaticon-add"></i></a>
+              <a href="#" title="">+</a>
             </div>
           </div><!-- end image-wrap -->
           <div class="course-details">
@@ -43,7 +43,7 @@
           <div class="image-wrap entry">
             <img src="upload/course_02.jpg" alt="" class="img-responsive">
             <div class="magnifier">
-              <a href="#" title=""><i class="flaticon-add"></i></a>
+              <a href="#" title="">+</a>
             </div>
           </div><!-- end image-wrap -->
           <div class="course-details">
@@ -75,7 +75,7 @@
           <div class="image-wrap entry">
             <img src="upload/course_03.jpg" alt="" class="img-responsive">
             <div class="magnifier">
-              <a href="#" title=""><i class="flaticon-add"></i></a>
+              <a href="#" title="">+</a>
             </div>
           </div><!-- end image-wrap -->
           <div class="course-details">
@@ -107,7 +107,7 @@
           <div class="image-wrap entry">
             <img src="upload/course_04.jpg" alt="" class="img-responsive">
             <div class="magnifier">
-              <a href="#" title=""><i class="flaticon-add"></i></a>
+              <a href="#" title="">+</a>
             </div>
           </div><!-- end image-wrap -->
           <div class="course-details">
@@ -139,7 +139,7 @@
           <div class="image-wrap entry">
             <img src="upload/course_01.jpg" alt="" class="img-responsive">
             <div class="magnifier">
-              <a href="#" title=""><i class="flaticon-add"></i></a>
+              <a href="#" title="">+</a>
             </div>
           </div><!-- end image-wrap -->
           <div class="course-details">
