--- a/app/views/visitors/_formlist.html.erb
+++ b/app/views/visitors/_formlist.html.erb
@@ -4,7 +4,7 @@
 
       <div class="col-md-4">
         <div class="custom-module">
-          <img src="upload/formlist.jpg" alt="" class="img-responsive wow slideInLeft img-center">
+          <img src="upload/formlist.jpg" alt="" class="img-responsive wow slideInLeft img-center img-border">
         </div>
       </div>
       <div class="col-md-8 overlay-manual">
