--- a/app/views/visitors/_header_menu.html.erb
+++ b/app/views/visitors/_header_menu.html.erb
@@ -23,10 +23,10 @@
           <li class="dropdown hassubmenu">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Contacto & redes <span class="fa fa-angle-down"></span></a>
             <ul class="dropdown-menu" role="menu">
-              <li><a href="tel:+34912345678#"><strong><i class="fa fa-phone"></i></strong>&nbsp;&nbsp;&nbsp;+34 91 234 56 78</a></li>
-              <li><a href="mailto:kream.madrid@gmail.com"><strong><i class="fa fa-envelope"></i></strong>&nbsp;&nbsp;&nbsp;kream.madrid@gmail.com</a></li>
-              <li><a class="facebook" href="https://es-es.facebook.com/Kr3am/" data-tooltip="tooltip" data-placement="bottom" title="Facebook" target="_blank"><i class="fa fa-facebook"></i>&nbsp;&nbsp;&nbsp;Facebook</a></li>
-              <li><a class="instagram" href="https://www.instagram.com/kream_madrid/?hl=es" data-tooltip="tooltip" data-placement="bottom" title="Instagram" target="_blank"><i class="fa fa-instagram"></i>&nbsp;&nbsp;&nbsp;Instagram</a></li>
+              <li><a class="color-white" href="tel:+34912345678#"><strong><i class="fa fa-phone"></i></strong>&nbsp;&nbsp;&nbsp;&nbsp;+34 91 234 56 78</a></li>
+              <li><a class="color-white" href="mailto:kream.madrid@gmail.com"><strong><i class="fa fa-envelope"></i></strong>&nbsp;&nbsp;&nbsp;kream.madrid@gmail.com</a></li>
+              <li><a class="color-white" href="https://es-es.facebook.com/Kr3am/" data-tooltip="tooltip" data-placement="bottom" title="Facebook" target="_blank"><i class="fa fa-facebook"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Facebook</a></li>
+              <li><a class="color-white" href="https://www.instagram.com/kream_madrid/?hl=es" data-tooltip="tooltip" data-placement="bottom" title="Instagram" target="_blank"><i class="fa fa-instagram"></i>&nbsp;&nbsp;&nbsp;&nbsp;Instagram</a></li>
             </ul>
           </li>
         </ul>
