--- a/app/views/visitors/_formlist.html.erb
+++ b/app/views/visitors/_formlist.html.erb
@@ -3,8 +3,13 @@
     <div class="row">
 
       <div class="col-md-4">
-        <div class="custom-module">
+        <div class="custom-module entry">
           <img src="upload/formlist.jpg" alt="" class="img-responsive wow slideInLeft img-center img-border">
+          <div class="magnifier">
+            <a rel="prettyPhoto[formlist]" href="upload/formlist.jpg" title=""><i class="fa fa-eye"></i></a>
+            <a rel="prettyPhoto[formlist]" href="/upload/video_sesion.mp4?iframe=true&width=500&height=344" title=""></a>
+            <a rel="prettyPhoto[formlist]" href="https://www.youtube.com/watch?v=lirVyWRk3bQ" title=""></a>
+          </div>
         </div>
       </div>
       <div class="col-md-8 overlay-manual">
