Prueba descripción WhatsApp

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,9 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
+  <!--  WhatsApp-->
+  <meta data-ue-u="description" name="description" content="Psychodelic Tribal Session"/>
+
   <!-- Site Icons -->
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
   <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
