--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,8 @@
 
   <!--  WhatsApp-->
   <meta data-ue-u="description" name="description" content="Psychodelic Tribal Session"/>
-
+  <meta data-ue-u="og:description" property="og:description" content="Psychodelic Tribal Session"/>
+  
   <!-- Site Icons -->
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
   <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
