Prueba descripción WhatsApp

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,9 +18,13 @@
   <meta name="author" content="">
 
   <!--  WhatsApp-->
-  <meta data-ue-u="description" name="description" content="Psychodelic Tribal Session"/>
-  <meta data-ue-u="og:description" property="og:description" content="Psychodelic Tribal Session"/>
-  
+  <meta property="og:site_name" content="Kream">
+  <meta property="og:title" content="Kream" />
+  <meta property="og:description" content="Psychodelic Tribal Session" />
+  <meta property="og:image" itemprop="image" content="/upload/whatsapp.jpg">
+  <meta property="og:type" content="website" />
+  <meta property="og:updated_time" content="<%= Time.now.to_i %>" />
+
   <!-- Site Icons -->
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
   <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
