Prueba descripción WhatsApp

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
   <meta property="og:site_name" content="Kream">
   <meta property="og:title" content="Kream" />
   <meta property="og:description" content="Psychodelic Tribal Session" />
-  <meta property="og:image" itemprop="image" content="<%= root_path %>/upload/whatsapp.jpg">
+  <meta property="og:image" itemprop="image" content="<%= request.original_url %>/upload/whatsapp.jpg">
   <meta property="og:type" content="website" />
   <meta property="og:updated_time" content="<%= Time.now.to_i %>" />
 
