--- a/app/views/visitors/_copyrights.html.erb
+++ b/app/views/visitors/_copyrights.html.erb
@@ -10,7 +10,7 @@
       <div class="pull-right">
         <div class="footer-links">
           <ul class="list-inline">
-            <li>Diseñado y desarrollado por:&#160&#160<a href="#" data-toggle="modal" data-target="#login-modal" class="owner">
+            <li>Diseñado y desarrollado por:&#160&#160<a href="#" data-toggle="modal" data-target="#modal-owner" class="owner">
               <span class="rainbow1">G</span>
               <span class="rainbow2">i</span>
               <span class="rainbow3">n</span>
@@ -20,6 +20,7 @@
               <span class="rainbow7">a</span>
               <span class="rainbow8">^</span>
               <span class="rainbow9">^</span>
+              <img class ="clic_here" src="/upload/clic_here.png">
             </a></li>
           </ul>
         </div>
