--- a/app/views/visitors/_modal.html.erb
+++ b/app/views/visitors/_modal.html.erb
@@ -1,4 +1,4 @@
-<div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-hidden="true" style="display: none;">
+<div class="modal fade" id="modal-owner" tabindex="-1" role="dialog" aria-hidden="true" style="display: none;">
   <div class="modal-dialog">
     <div class="modal-content">
       <div id="div-forms">
@@ -7,9 +7,10 @@
             <span aria-hidden="true">+</span>
           </button>
           <div class="modal-body">
-            <input class="form-control" type="text" placeholder="Escribe aquí lo que quieras" required>
+            <input class="form-control" type="text" placeholder="Escribe aquí lo que quieras" id="modal-input" required>
             <br>
             <p>Hola, soy Ginebra. Si tienes cualquier sugerencia, idea o simplemente quieres decirme algo, puedes hacerlo por aquí arriba ^^</p>
+            <p>PÁGINA EN OBRAS!! ESTO AÚN NO FUNCIONA!!!!</p>
           </div>
         </form>
       </div>
