--- a/app/views/visitors/_modal.html.erb
+++ b/app/views/visitors/_modal.html.erb
@@ -9,7 +9,7 @@
           <div class="modal-body">
             <input class="form-control" type="text" placeholder="Escribe aquí lo que quieras" id="modal-input" required>
             <br>
-            <p>Hola, soy Ginebra. Si tienes cualquier sugerencia, idea o simplemente quieres decirme algo, puedes hacerlo por aquí arriba ^^</p>
+            <p>Hola, soy Ginebra. Si tienes cualquier sugerencia, idea o simplemente quieres decirme algo, puedes hacerlo aquí arriba ^^</p>
             <p>PÁGINA EN OBRAS!! ESTO AÚN NO FUNCIONA!!!!</p>
           </div>
         </form>
