Todas las sesiones pasadas maqueta

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1105,7 +1105,7 @@ COURSE MODULES
 }
 
 .course-box img {
-    border-radius: 6px 6px 0 0;
+    border-radius: 6px 6px 6px 6px;
     width: 100%;
 }
 
@@ -1126,7 +1126,7 @@ COURSE MODULES
 
 .course-box small {
     display: block;
-    font-size: 80%;
+    font-size: 90%;
     margin-bottom: 10px;
 }
 
@@ -2321,4 +2321,8 @@ html {
     position: relative;
     left: -25px;
     bottom: -20px;
+}
+
+.caro-item {
+    width: 99%;
 }
