--- a/app/views/visitors/_header_menu.html.erb
+++ b/app/views/visitors/_header_menu.html.erb
@@ -18,8 +18,8 @@
           <li><a href="#" onclick="$('#header_menu_button').attr('aria-expanded') == 'true' ? $('#header_menu_button').click() : '';">Intro</a></li>
           <li><a href="#formlist" onclick="$('#header_menu_button').attr('aria-expanded') == 'true' ? $('#header_menu_button').click() : '';">Próxima sesión</a></li>
           <li><a href="#past_sessions" onclick="$('#header_menu_button').attr('aria-expanded') == 'true' ? $('#header_menu_button').click() : '';">Sesiones pasadas</a></li>
-          <li><a href="#tribe_title" onclick="$('#header_menu_button').attr('aria-expanded') == 'true' ? $('#header_menu_button').click() : '';">Tribu</a></li>
-          <li><a href="#friends" onclick="$('#header_menu_button').attr('aria-expanded') == 'true' ? $('#header_menu_button').click() : '';">Amigos</a></li>
+<!--          <li><a href="#tribe_title" onclick="$('#header_menu_button').attr('aria-expanded') == 'true' ? $('#header_menu_button').click() : '';">Tribu</a></li>-->
+<!--          <li><a href="#friends" onclick="$('#header_menu_button').attr('aria-expanded') == 'true' ? $('#header_menu_button').click() : '';">Amigos</a></li>-->
           <li class="dropdown hassubmenu">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Contacto & redes <span class="fa fa-angle-down"></span></a>
             <ul class="dropdown-menu" role="menu">
