--- a/app/views/visitors/_modal.html.erb
+++ b/app/views/visitors/_modal.html.erb
@@ -6,6 +6,7 @@
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">+</span>
           </button>
+          <img class ="clic_here" src="/upload/cat.gif">
           <div class="modal-body">
             <input class="form-control" type="text" placeholder="Escribe aquí lo que quieras" id="modal-input" required>
             <br>
