--- a/app/views/visitors/_modal.html.erb
+++ b/app/views/visitors/_modal.html.erb
@@ -2,13 +2,14 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div id="div-forms">
-        <form id="login-form">
+        <form id="gin-form">
+          <img class="bounce" src="/upload/cat.gif">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">+</span>
           </button>
-          <img class ="clic_here" src="/upload/cat.gif">
           <div class="modal-body">
-            <input class="form-control" type="text" placeholder="Escribe aquí lo que quieras" id="modal-input" required>
+            <textarea class="form-control modal-textarea" placeholder="Escribe aquí lo que quieras" id="modal-textarea" form="gin-form" rows="4" required></textarea>
+            <button class="btn btn-primary modal-button" class="">Enviar</button>
             <br>
             <p>Hola, soy Ginebra. Si tienes cualquier sugerencia, idea o simplemente quieres decirme algo, puedes hacerlo aquí arriba ^^</p>
             <p>PÁGINA EN OBRAS!! ESTO AÚN NO FUNCIONA!!!!</p>
