Mejor zoom en foto principal y pretty photo de sesiones pasadas

--- a/app/views/visitors/_formlist.html.erb
+++ b/app/views/visitors/_formlist.html.erb
@@ -3,12 +3,11 @@
     <div class="row">
 
       <div class="col-md-4">
-        <div class="custom-module entry">
-          <img src="upload/formlist.jpg" alt="" class="img-responsive wow slideInLeft img-center img-border">
-          <div class="magnifier">
-            <a rel="prettyPhoto[formlist]" href="upload/formlist.jpg" title=""><i class="fa fa-eye"></i></a>
-            <a rel="prettyPhoto[formlist]" href="/upload/video_sesion.mp4?iframe=true&width=500&height=344" title=""></a>
-            <a rel="prettyPhoto[formlist]" href="https://www.youtube.com/watch?v=lirVyWRk3bQ" title=""></a>
+        <div class="custom-module to-zoom">
+          <img src="upload/formlist.jpg" style="cursor:zoom-in" class="img-responsive wow slideInLeft img-center img-border tz-img">
+          <div class="modal-img tz-modal">
+            <img class="modal-content-img tz-img-modal">
+            <div class="tz-caption"></div>
           </div>
         </div>
       </div>
