--- a/app/views/admin/_nav_side.html.erb
+++ b/app/views/admin/_nav_side.html.erb
@@ -2,38 +2,23 @@
   <div class="sidebar-collapse">
     <ul class="nav" id="main-menu">
 
+      <li class=<%= 'active-link' if params[:action] == 'index' %>><a href=<%= admin_path %> ><i class="fa fa-desktop"></i>Principal</a></li>
+      <li class=<%= 'active-link' if params[:action] == 'general' %>><a href=<%= admin_general_path %> ><i class="fa fa-wrench"></i>Cambios generales</a></li>
+      <li class=<%= 'active-link' if params[:action] == 'current_party' %>><a href=<%= admin_current_party_path %> ><i class="fa fa-music"></i>Sesión actual</a></li>
 
+      <br>
+      <li class=<%= 'active-link' if params[:action] == 'dashboard' %>><a href=<%= admin_dashboard_path %> ><i class="fa fa-table"></i>Dashboard</a></li>
+      <li class=<%= 'active-link' if params[:action] == 'ui' %>><a href=<%= admin_ui_path %> ><i class="fa fa-qrcode"></i>UI</a></li>
 
-      <li>
-        <a href="index.html" ><i class="fa fa-desktop "></i>Principal <span class="badge">Included</span></a>
-      </li>
-
-
-      <li class="active-link">
-        <a href="ui.html"><i class="fa fa-table "></i>UI Elements  <span class="badge">Included</span></a>
-      </li>
-      <li>
-        <a href="blank.html"><i class="fa fa-edit "></i>Blank Page  <span class="badge">Included</span></a>
-      </li>
-
-
-      <li>
-        <a href="#"><i class="fa fa-qrcode "></i>My Link One</a>
-      </li>
-      <li>
-        <a href="#"><i class="fa fa-bar-chart-o"></i>My Link Two</a>
-      </li>
-
-      <li>
-        <a href="#"><i class="fa fa-edit "></i>My Link Three </a>
-      </li>
-      <li>
-        <a href="#"><i class="fa fa-table "></i>My Link Four</a>
-      </li>
-      <li>
-        <a href="#"><i class="fa fa-edit "></i>My Link Five </a>
-      </li>
+<!--        <li><a href="ui.html"><i class="fa fa-table "></i>UI Elements  <span class="badge">Included</span></a></li>-->
+<!--        <li><a href="blank.html"><i class="fa fa-edit "></i>Blank Page  <span class="badge">Included</span></a></li>-->
+<!--        <li><a href="#"><i class="fa fa-qrcode "></i>My Link One</a></li>-->
+<!--        <li><a href="#"><i class="fa fa-bar-chart-o"></i>My Link Two</a></li>-->
+<!--        <li><a href="#"><i class="fa fa-edit "></i>My Link Three </a></li>-->
+<!--        <li><a href="#"><i class="fa fa-table "></i>My Link Four</a></li>-->
+<!--        <li><a href="#"><i class="fa fa-edit "></i>My Link Five </a></li>-->
     </ul>
+
   </div>
 
 </nav>
