--- a/app/views/admin/_nav_top.html.erb
+++ b/app/views/admin/_nav_top.html.erb
@@ -10,7 +10,7 @@
     </div>
 
     <span class="logout-spn" >
-                  <a href="#" style="color:#fff;">LOGOUT</a>
+                  <a href=<%= root_path %> style="color:#fff;">Volver a la web</a>
 
                 </span>
   </div>
