--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Kream</title>
-  <%#= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 
   <!-- Basic -->
@@ -37,11 +37,12 @@
 
 
   <!-- Custom & Default Styles -->
+  <%= stylesheet_link_tag 'front/animate' %>
   <%= stylesheet_link_tag 'front/bootstrap.min' %>
   <%= stylesheet_link_tag 'front/carousel' %>
-  <%= stylesheet_link_tag 'front/animate' %>
-  <%= stylesheet_link_tag 'front/style' %>
   <%= stylesheet_link_tag 'front/prettyPhoto' %>
+  <%= stylesheet_link_tag 'front/rainbow' %>
+  <%= stylesheet_link_tag 'front/style' %>
 
 </head>
 <body>
