--- a/app/views/visitors/_header_menu.html.erb
+++ b/app/views/visitors/_header_menu.html.erb
@@ -15,18 +15,24 @@
 
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#" onclick="$('#header_menu_button').attr('aria-expanded') == 'true' ? $('#header_menu_button').click() : '';">Intro</a></li>
-          <li><a href="#formlist" onclick="$('#header_menu_button').attr('aria-expanded') == 'true' ? $('#header_menu_button').click() : '';">Próxima sesión</a></li>
-          <li><a href="#past_sessions" onclick="$('#header_menu_button').attr('aria-expanded') == 'true' ? $('#header_menu_button').click() : '';">Sesiones pasadas</a></li>
-<!--          <li><a href="#tribe_title" onclick="$('#header_menu_button').attr('aria-expanded') == 'true' ? $('#header_menu_button').click() : '';">Tribu</a></li>-->
-<!--          <li><a href="#friends" onclick="$('#header_menu_button').attr('aria-expanded') == 'true' ? $('#header_menu_button').click() : '';">Amigos</a></li>-->
+          <li><a href="#" onclick="$('#header_menu_button').attr('aria-expanded') == 'true' ? $('#header_menu_button').click() : '';"><%= @general.top_intro %></a></li>
+          <li><a href="#formlist" onclick="$('#header_menu_button').attr('aria-expanded') == 'true' ? $('#header_menu_button').click() : '';"><%= @general.top_current_party %></a></li>
+          <li><a href="#past_sessions" onclick="$('#header_menu_button').attr('aria-expanded') == 'true' ? $('#header_menu_button').click() : '';"><%= @general.top_past_sessions %></a></li>
           <li class="dropdown hassubmenu">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Contacto & redes <span class="fa fa-angle-down"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%= @general.top_contact %> <span class="fa fa-angle-down"></span></a>
             <ul class="dropdown-menu" role="menu">
-              <li><a class="color-white" href="tel:+34912345678#"><strong><i class="fa fa-phone"></i></strong>&nbsp;&nbsp;&nbsp;&nbsp;+34 91 234 56 78</a></li>
-              <li><a class="color-white" href="mailto:kream.madrid@gmail.com"><strong><i class="fa fa-envelope"></i></strong>&nbsp;&nbsp;&nbsp;kream.madrid@gmail.com</a></li>
-              <li><a class="color-white" href="https://es-es.facebook.com/Kr3am/" data-tooltip="tooltip" data-placement="bottom" title="Facebook" target="_blank"><i class="fa fa-facebook"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Facebook</a></li>
-              <li><a class="color-white" href="https://www.instagram.com/kream_madrid/?hl=es" data-tooltip="tooltip" data-placement="bottom" title="Instagram" target="_blank"><i class="fa fa-instagram"></i>&nbsp;&nbsp;&nbsp;&nbsp;Instagram</a></li>
+              <li><a class="color-white" href="tel:+34912345678#">
+                <strong><i class="fa fa-phone"></i></strong>&nbsp;&nbsp;&nbsp;&nbsp;<%= @general.contact_phone %>
+              </a></li>
+              <li><a class="color-white" href="mailto:kream.madrid@gmail.com">
+                <strong><i class="fa fa-envelope"></i></strong>&nbsp;&nbsp;&nbsp;<%= @general.contact_email %>
+              </a></li>
+              <li><a class="color-white" href="<%= @general.contact_facebook %>" data-tooltip="tooltip" data-placement="bottom" title="Facebook" target="_blank">
+                <i class="fa fa-facebook"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Facebook
+              </a></li>
+              <li><a class="color-white" href="<%= @general.contact_instagram %>" data-tooltip="tooltip" data-placement="bottom" title="Instagram" target="_blank">
+                <i class="fa fa-instagram"></i>&nbsp;&nbsp;&nbsp;&nbsp;Instagram
+              </a></li>
             </ul>
           </li>
         </ul>
